Read-through (perhaps the last? (ha!))

--- a/back.tex
+++ b/back.tex
@@ -1,4 +1,4 @@
-\setlength\parskip{0.75\baselineskip}
+\setlength\parskip{0.6\baselineskip}
 \setlength\parindent{0pt}
 
 \chapter{Additional Resources}
@@ -34,6 +34,8 @@ Available (for free!) at \https{practicaltypography.com}
 \textit{Stop Stealing Sheep \& Find Out How Type Works}, by Erik Spiekermann
 
 \textit{Thinking With Type}, by Ellen Lupton
+
+\textit{Shaping Text}, by Jan Middendorp
 
 \textit{The Elements of Typographic Style}, by Robert Bringhurst
 
