--- a/history.tex
+++ b/history.tex
@@ -42,7 +42,7 @@ of \textit{The Ren~\&~Stimpy Show}.\punckern\endnote{``yak shaving''\quotekern,
 of all time.
 For years, he paused work on his books to create his own
 typesetting system.
-When the dust settled in 1978, Knuth had the first version of
+When the dust settled in 1978, he had the first version of
 \TeX.\punckern\footnote{The name ``\TeX{}'' comes from the Greek
 {\fontspec[Scale=MatchLowercase]{NotoSerif-Medium}τέχνη},
 meaning \introduce{art} or \introduce{craft}.\punckern\endnote{Knuth,
@@ -116,7 +116,7 @@ The most recent version, 3.14159265, came out in January~2014.
 
 Building \TeX{} today is an\dots{} interesting endeavor.
 When it was written in the late 1970s,
-there were no large, well-documented open-source projects for students to study,
+there were no large, well-documented, open-source projects for students to study,
 so Knuth set out to make \TeX{} into one.
 As part of this effort, \TeX{} was written in a style he calls
 \introduce{literate programming}: opposite most programs---where
