--- a/latex-book.tex
+++ b/latex-book.tex
@@ -339,19 +339,17 @@ Some crappy draft, typeset \today.
 
 Changes since the last proof include:
 \begin{itemize}
-\item The book is now designed for \textsc{a5} paper instead of
-    \textsc{us}~\textsc{t}rade.
-\item The top margin was increased to \otffrac{3}{4}\,in. \\
-    (Forgive this silly American for using \textsc{a5} paper with margins in inches.)
-\item The outer margin was increased by \otffrac{1}{20}\,in,
-    and the inner margin was decreased by the same amount.
-\item Monospaced code listings were grown to match the body text size
-    (11\,pt).
-\item Minor spacing tweaks were made to the table of contents.
+\item The inner and outer margin were equalized.
+    There seems like there will be enough of a gutter if we use 0.6\,in.\ on
+    both sides.
+\item Yet another read-through of minor edits.
 \end{itemize}
 \vfill
 
-The author apologizes for any typos, misattributions, and other flubs.
+The author apologizes for any typos,
+f\raisebox{-0.1ex}{o}rmatt\raisebox{0.1ex}{i}ng mistakes,
+misattributions,
+and other flubs.
 He welcomes you to point them out on this book's Github
 repository at \\
 \https{github.com/mrkline/latex-book} \\
@@ -378,10 +376,6 @@ The license's full text is available at \\
 
 \vspace*{1in}
 {\itshape%
-%\noindent To Donald, Leslie, \\
-%Ellen, Erik, Jost, Matthew, \& Robert
-%\bigskip
-%
 To Max, who once told me about a cool program he used to type up
 his college papers.
 }
