--- a/micro.tex
+++ b/micro.tex
@@ -53,14 +53,14 @@ into the margins.
 
 \section{Font expansion}
 
-To assist \LaTeX's justification algorithm,
-\texttt{microtype} can
-stretch or shrink characters horizontally to produce a layout
-with more even spacing and fewer hyphenated lines.
-You might think that distorting character shapes this way would be immediately
+In order to to help \LaTeX's justification algorithm build paragraphs with
+more even spacing and fewer hyphenated lines,
+\texttt{microtype} can stretch characters horizontally.
+You might think that distorting the type this way would be immediately
 noticeable,
-but you're reading a book that does this on every page!
-Font expansion is applied \emph{very} slightly---by default,
+but you're reading a book that does so on every page!
+This effect, called \introduce{font expansion},
+is applied \emph{very} slightly---by default,
 character widths are altered by no more than two percent.\punckern\footnote{%
 Of course, you can use package options to change this limit,
 or disable the feature entirely.}
