--- a/troubleshooting.tex
+++ b/troubleshooting.tex
@@ -33,7 +33,8 @@ begins the next.
 \LaTeX{} tries to avoid these, but unfortunately, its page-splitting algorithm
 is much more simplistic than the one it uses
 to split paragraphs into lines.\punckern\footnote{This is because
-1980s computers didn't have enough \acronym{ram} to do so. Seriously:
+1980s computers didn't have enough \acronym{ram} to do so. Seriously---Knuth
+wrote at the time,
 ``The computer doesn't have enough high-speed memory capacity to remember the
 contents of several pages,
 so \TeX{} simply chooses each page break as best it can, by a process of
