--- a/math.tex
+++ b/math.tex
@@ -41,6 +41,9 @@ Before moving on, though, let's show some examples of what it can do.
 \newpage
 
 \begin{enumerate}
+% We're going to cheat a bit here,
+% since getting \sin, \cos, etc. to be Latin Modern is oddly tricky,
+% even when using the unicode-math package
 \item \verb|x = \frac{-b \pm \sqrt{b^2 - 4 a c}}{2a}|
     \[x = \frac{-b \pm \sqrt{b^2 - 4 a c}}{2a} \]
 
