--- a/pagelayout.tex
+++ b/pagelayout.tex
@@ -6,7 +6,7 @@
 Instead of considering lines individually---as most word processors,
 web browsers, and e-readers do---it examines all possible line breaks
 in a given paragraph,
-then picks the ones that give the best overall
+then picks whichever ones give the best overall
 spacing.\punckern\endnote{Donald E.~Knuth and Michael F.~Plass,
 \textit{Breaking Paragraphs Into Lines} (Stanford, 1981)}
 Combined with its ability to automatically hyphenate words,
@@ -14,7 +14,7 @@ which permits line breaks in many more places,\punckern\endnote{%
 Franklin Mark Liang,
 \textit{Word Hy-phen-a-tion by Com-put-er} (Stanford, 1983),
 \http{www.tug.org/docs/liang/}}
-this produces better paragraph layouts than almost any other software.
+this approach produces better paragraph layouts than almost any other software.
 
 But sometimes we don't want our text justified.
 If you would like it to be flush left,
@@ -43,9 +43,8 @@ And this text is flush right.
 \end{lstlisting}
 \end{leftfigure}
 sets
-\begin{leftfigure}
-\fbox{%
-\begin{minipage}{0.7\textwidth}
+\begin{flushleftfigure}
+\begin{minipage}{0.99\textwidth}
 \lm%
 \begin{flushleft}
 This text is flush left, with a ragged right edge.
@@ -61,15 +60,14 @@ This text is centered.
 And this text is flush right.
 \end{flushright}
 \end{minipage}
-}
-\end{leftfigure}
+\end{flushleftfigure}
 
 \section{Lists}
 
 \LaTeX{} provides multiple environments for creating lists:
 \texttt{itemize}, \texttt{enumerate}, and \texttt{description}.
-In all three, items starts with \verb|\item| commands.
-The \texttt{itemize} environment uses bullets.
+In all three, each item starts with an \verb|\item| command.
+The first environment, \texttt{itemize} creates bulleted lists.
 With:
 \begin{leftfigure}
 \begin{lstlisting}
@@ -114,7 +112,7 @@ produces
 \bigskip
 \noindent The \texttt{description} environment starts each item with some
 emphasized \introduce{label},
-then indents lines that follow:
+then indents all subsequent lines for that item:
 \begin{leftfigure}
 \begin{lstlisting}
 \begin{description}
@@ -159,10 +157,11 @@ We often split layouts into several columns, especially when printing on
 since it allows more comfortable line widths at standard
 8--12\,pt text sizes.\punckern\footnote{You'll see different advice depending
 on where you look, but as a rule of thumb, design layouts to have
-fewer than 90 characters (including spaces) per line.
-Shorter lines keep readers from needing to scan very far to find the start of
-the next one.
-This produces a more comfortable experience.}
+between 45 and 80 characters (including spaces) per line.
+If a line is too long, readers have an uncomfortable time scanning for
+the start of the next one.
+If a line is too short, it doesn't have much inter-word spacing to adjust,
+creating odd gaps or excessive hyphenation.}
 You can either add the \texttt{twocolumn} option to your document class,
 which splits everything in two, or you can use the \texttt{multicols}
 environment from the \texttt{multicol} package:
@@ -219,7 +218,7 @@ I love footnotes!\footnote{Perhaps a bit too much\dots}
 
 \section{What next?}
 \begin{itemize}
-\item Control paragraph spacing, either using the relevant
+\item Control paragraph spacing, either with
 KOMA~Script options, or with the \texttt{parskip} package.
 \item Set the page size and margins with the \texttt{geometry} package.
 \item Customize list formatting with the \texttt{enumitem} package.
