--- a/punctuation.tex
+++ b/punctuation.tex
@@ -22,7 +22,7 @@ will get you
 \lm%
 "This isn't right."
 \end{leftfigure}
-Instead, use \texttt{`} for opening quotes and \texttt{'} for closing
+Instead, use \texttt{\bfseries `} for opening quotes and \texttt{\bfseries '} for closing
 quotes.\punckern\footnote{If your keyboard layout happens to have keys for
 ``curly'' quotes (\,\texttt{“}\,\texttt{”}\,), feel free to use those instead!
 Also, don't use \texttt{"} for closing double quotes.
@@ -64,14 +64,14 @@ serve different purposes.
         It's clearer that I mean the latter when typeset as
         \emph{five-dollar bills}.
     \end{itemize}
-    Unsurprisingly, they are produced with the hyphen key (\,\texttt{-}\,).
+    Unsurprisingly, they are produced with the hyphen character (\,\texttt{-}\,).
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
-    and connected word terms, like the \mbox{``US--Canada} border''\quotekern.
+    and connected words, like the \mbox{``US--Canada} border''\quotekern.
     \LaTeX{} will place one wherever it sees two adjacent hyphens
     (\,\texttt{--}\,).
 
-\item[Em dashes] can be used to separate clauses of a sentence.
+\item[Em dashes] are used to separate clauses of a sentence.
     Other punctuation---like parenthesis or commas---play a similar
     role.
     They are typeset with three hyphens (\,\texttt{---}\,).
@@ -80,8 +80,8 @@ serve different purposes.
     mathematical expressions.
     They are similar in length to an en dash,
     but sit at a different height.
-    Minus signs are set with \verb|\textminus|, or with the hyphen key when in
-    a math environment (see \chapref{math}).
+    Minus signs are set with \verb|\textminus|, or with the hyphen character
+    when in a math environment (see \chapref{math}).
 \end{description}
 
 \section{Ellipses}
@@ -99,11 +99,13 @@ becomes
 \lm%
 I'm\dots{} not sure.
 \end{leftfigure}
+Ellipses are spaced differently than consecutive periods.
+Don't use the latter as a poor substitute.
 
 \section{Spacing}
 
 As we discovered in \chapref{hello},
-\LaTeX{} inserts more space between periods and whatever
+\LaTeX{} inserts additional space between periods and whatever
 follows them---presumably the start of the next sentence.
 This isn't always what we want!
 Consider honorifics like Mr.\ and Ms., for example.
@@ -142,7 +144,7 @@ Launch in 2\,h 10\,m.
 \item Add hyphenations for uncommon words using \verb|\hyphenate|
     or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a good
     job of automatically hyphenating words, based on a dictionary of patterns
-    stored for each language. You should rarely need these tools.}
+    stored for each language. You should rarely need to use these commands.}
 \item Learn other commands for spacing, such as \verb|\:|, \verb|\;|,
     \verb|\enspace|, and \verb|\quad|.
 \item Use the \texttt{csquotes} package's \verb|\enquote| to simplify
