Letterspace NHG Display slightly
Yes, perhaps I should just use NHG Text, but it doesn't come in a light
weight.

--- a/textformatting.tex
+++ b/textformatting.tex
@@ -121,7 +121,7 @@ But points and optical sizes don't tell the whole story.
 Each typeface has its own proportions, which make a huge difference
 in perceived size.
 (Compare Garamond, {\fontspec{Latin Modern Roman} Latin Modern},
-and {\fontspec{NHaasGroteskDSPro-45Lt}Helvetica}, all at 11\,pt.)
+and {\fontspec{NHaasGroteskDSPro-45Lt}\addfontfeature{LetterSpace=3}Helvetica}, all at 11\,pt.)
 Shown below are some common terms:
 \begin{centerfigure}
 \includegraphics[keepaspectratio,width=0.7\textwidth]{heights.png}
