Rewordings to decrease hyphenations

--- a/punctuation.tex
+++ b/punctuation.tex
@@ -68,13 +68,13 @@ serve different purposes.
 
 \item[En dashes] are for ranges such as ``pages 4--12''\quotekern,
     and connected words, like the \mbox{``US--Canada} border''\quotekern.
-    \LaTeX{} will place one wherever it sees two adjacent hyphens
+    \LaTeX{} places one wherever it sees two adjacent hyphens
     (\,\texttt{--}\,).
 
 \item[Em dashes] are used to separate clauses of a sentence.
-    Other punctuation---like parenthesis or commas---play a similar
+    Other punctuation---like parenthesis and commas---play a similar
     role.
-    They are typeset with three hyphens (\,\texttt{---}\,).
+    Em dashes are typeset with three hyphens (\,\texttt{---}\,).
 
 \item[Minus signs] are used for negative quantities and
     mathematical expressions.
