Final touches before another proof

--- a/international.tex
+++ b/international.tex
@@ -93,6 +93,7 @@ Direct all complaints to Cartoon Network.} fromage!»
 \directlua{polyglossia.desactivate_frpt()}
 
 \section{What next?}
+\begin{flushleft}
 \begin{itemize}
 \item See the \texttt{polyglossia} manual for language-specific commands.
 \item Look into the \texttt{babel} package as an alternative to
@@ -105,3 +106,4 @@ Direct all complaints to Cartoon Network.} fromage!»
 \item Try typesetting Japanese or Chinese with the \texttt{xeCJK} or
     \monobox{luatex-ja} packages.
 \end{itemize}
+\end{flushleft}
