--- a/latex-book.tex
+++ b/latex-book.tex
@@ -343,6 +343,9 @@ Changes since the last proof include:
     There seems like there will be enough of a gutter if we use 0.6\,in.\ on
     both sides.
 \item Yet another read-through of minor edits.
+\item We've settled on Drive Mono.
+    (A completely random sample of my coworkers voted for it unanimously over
+    Fira Mono.)
 \end{itemize}
 \vfill
 
@@ -353,7 +356,7 @@ and other flubs.
 He welcomes you to point them out on this book's Github
 repository at \\
 \https{github.com/mrkline/latex-book} \\
-Questions, comments, concerns, and diatribes can also be sent to \\
+Questions, comments, concerns, and diatribes can also be emailed to \\
 \texttt{matt <at> bitbashing.io}
 
 The author does not have a checking account with the Bank of San Serriffe,
