Tweak back wording

--- a/back-cover.tex
+++ b/back-cover.tex
@@ -91,11 +91,11 @@ every\enspace time
 they\enspace see\quad
 bad\quad spacing\quad for the rest of their\,lives.
 One of the two.
-Despite origins that trace back nearly four decades,
+Despite origins that can be traced back four decades,
 it remains one of the best typesetting programs around.
 Many of its guides, however, haven't aged as well.
 This short book will get you started with \LaTeX{}
-without bogging you down in lessons that lost their relevance
+without bogging you down in nonsense that lost its relevance
 in the 1990s.
 \vspace{0.5in}
 
