Fix spurious warning re: Futura small caps

--- a/fonts.tex
+++ b/fonts.tex
@@ -100,7 +100,7 @@ The version of Futura used in this book, for example, comes in
 {\fontspec[Scale=MatchLowercase]{Futura-Bol}bold}, and
 {\fontspec[Scale=MatchLowercase]{Futura-ExtBol}extra bold}.
 Additional styles, such as
-{\fontspec[Scale=MatchLowercase]{FuturaSc-Boo}\textsc{small capitals}},
+{\fontspec[Scale=MatchLowercase]{FuturaSc-Boo}small capitals},
 may be stored in separate files as well.\punckern\footnote{%
 OpenType allows these alternative styles to be placed in the same file(s) as the
 ``main'' glyphs for a given weight.
