Use smaller type for microtype block quote
It would be pretty silly to have so many hyphens in a quote describing
microtypography.

--- a/micro.tex
+++ b/micro.tex
@@ -5,6 +5,7 @@
 with small, subliminal tweaks.
 In other words, it is
 \begin{quote}
+\small
 [\dots]the art of enhancing the appearance and readability of a
 document while exhibiting a minimum degree of visual obtrusion.
 It is concerned with what happens between or at the margins of characters,
