--- a/latex-book.tex
+++ b/latex-book.tex
@@ -76,19 +76,19 @@
     Scale=MatchLowercase,
     UprightFeatures={
         SizeFeatures={
-            {Size={-10}, Font=TRY_DriveMono-Book},
-            {Size={10-}, Font=TRY_DriveMono-Regular},
+            {Size={-10}, Font=DriveMono-Book},
+            {Size={10-}, Font=DriveMono-Regular},
         },
     },
     ItalicFeatures={
         SizeFeatures={
-            {Size={-10}, Font=TRY_DriveMono-BookItalic},
-            {Size={10-}, Font=TRY_DriveMono-Italic},
+            {Size={-10}, Font=DriveMono-BookItalic},
+            {Size={10-}, Font=DriveMono-Italic},
         },
     },
-    BoldFont=TRY_DriveMono-Bold,
-    BoldItalicFont=TRY_DriveMono-BoldItalic
-]{TRY Drive Mono}
+    BoldFont=DriveMono-Bold,
+    BoldItalicFont=DriveMono-BoldItalic
+]{Drive Mono}
 
 \setmathrm{Latin Modern Roman}
 
