Minor tweak to footnote about ñ

--- a/hello.tex
+++ b/hello.tex
@@ -201,8 +201,7 @@ once upon a time, users had to typeset ``jalapeño'' as
 \verb|jalape\~no|.
 Today, we just type \texttt{ñ} into our source
 file.\punckern\footnote{The ease with which you can do this depends
-on the keyboard you're using, the language settings in your \acronym{os},
-and your editor.
+on your keyboard, your editor, and the language settings in your \acronym{os}.
 We'll talk much more about non-English languages and Unicode fun
 in \chapref{i18n}.}
 
