Minor tweak in ellipses

--- a/punctuation.tex
+++ b/punctuation.tex
@@ -100,7 +100,7 @@ becomes
 I'm\dots{} not sure.
 \end{leftfigure}
 Ellipses are spaced differently than consecutive periods.
-Don't use the latter as a poor substitute.
+Don't use the latter as a poor substitute for the former.
 
 \section{Spacing}
 
