Remove dead comments re: page numbers

--- a/latex-book.tex
+++ b/latex-book.tex
@@ -200,8 +200,8 @@
 \clearpairofpagestyles
 \pagestyle{scrheadings}
 \setkomafont{pagefoot}{\upshape}
-\lefoot*{\thepage} % \, is a TeX primitive for a thin space.
-\rofoot*{\thepage} % \, is a TeX primitive for a thin space.
+\lefoot*{\thepage}
+\rofoot*{\thepage}
 
 \usepackage{changepage} % For adjustwidth
 
