Text styles: active voice

--- a/textformatting.tex
+++ b/textformatting.tex
@@ -50,8 +50,8 @@ A (mostly) complete list follows:
 \texttt{\textbackslash textbf\{...\}} & \texttt{\{\textbackslash bfseries ...\}} & \textbf{boldface} \\
 \end{tabularx}
 \end{flushleftfigure}
-The first form (which takes the text to format as an argument)
-should be preferred over the second
+Prefer the first form (which takes the text to format as an argument)
+over the second
 (which affect the group in which they are issued),
 since the former automatically handle any
 spacing corrections needed around them.\punckern\footnote{For example,
